Modifie le title

--- a/styleguide/parts/_header.html
+++ b/styleguide/parts/_header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title><%= title %> | Guide de style Febea</title>
+        <title><%= title %> | Guide de style</title>
         <meta charset="UTF-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
